--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www -e js, hbs –inspect"
+    "dev": "nodemon ./bin/www -e js,hbs –-inspect"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
